# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-workstation-tools/files/5.5.1/000_all_initd-scripts.
  patch,
  -app-emulation/vmware-workstation-tools/files/5.5.2/000_all_initd-scripts.
  patch,
  -app-emulation/vmware-workstation-tools/files/5.5.3/000_all_initd-scripts.
  patch,
  -app-emulation/vmware-workstation-tools/files/6.0.0.45731/000_all_vmware-t
  ools.patch, -app-emulation/vmware-workstation-tools/files/90vmware-tools,
  -app-emulation/vmware-workstation-tools/files/patches/000_all_makefile-inc
  lude-directory.patch,
  -app-emulation/vmware-workstation-tools/files/vmware-workstation-tools,
  -app-emulation/vmware-workstation-tools/files/vmware-workstation-tools.rc,
  -app-emulation/vmware-workstation-tools/files/xorg.conf:
  Deprecating vmware-workstation-tools in favour of open-vm-tools.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-player/files/2.0.2.59824:
  Sync vmware-server-console with tree.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-server/vmware-server-1.0.4.56528.ebuild,
  app-emulation/vmware-server/vmware-server-1.0.5.80187.ebuild:
  Sync vmware-server with tree.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-modules/files/1.0.0.17-kernel-2.6.13-rtnl.patch:
  Sync vmware-player with the tree.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-modules/files/1.0.0.17-kernel-2.6.13-rtnl.patch:
  Sync vmware-modules with the tree.

  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/files/open-vm.initd,
  -app-emulation/open-vm-tools/files/open-vm-tools-as-needed.patch:
  Sync open-vm-tools with tree. Merge dependencies between x86 and amd64
  arches.

  25 Apr 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-server/files/2.0.0.84186/000_all_initd-location.patc
  h,