@@ -45,8 +45,8 @@ DIST VMware-workstation-6.0.3-80004.x86_64.tar.gz 199349808 RMD160 c49340796824d
 DIST VMware-workstation-e.x.p-84113.i386.tar.gz 307755709 RMD160 69a3614bfe5ee65380d0e86b72b5d9e2e272b6ea SHA1 312d88c42be24f6c46d4df87eeb6a20c89a0cd86 SHA256 e4bcec738c5e93de2848819524ee704e399d1d1e6e8a318621a4d0c07550acc1
 DIST VMware-workstation-e.x.p-84113.x86_64.tar.gz 278992270 RMD160 0eed636e79457300988bacbbee5b5eed3fd4d5b5 SHA1 abc46ac1ce37e97feb4f062b3f4fd1af6792cc69 SHA256 0d27031886dee8956e14319aa5ef2c0d19e33368b7f61c310141b2c350324ca9
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
-EBUILD vmware-workstation-5.5.5.56455.ebuild 3102 RMD160 a8323412796d4f6d2c97560d756693ed504a5f35 SHA1 4b9204ce3907913f40735d3ec81e4ce78f9adff2 SHA256 9b11fe8b5ee4cd5edc7b0e49a56a9da31019f0fc53f1cc2fca22da8d7dc38f5a
-EBUILD vmware-workstation-5.5.6.80404.ebuild 3212 RMD160 dcf5953942e75e9f82786b0176ae24a7a50ad7e4 SHA1 a8c58268d27fc49e784e4693548eb2f91dcf2077 SHA256 ad2687fdfc5dc4c2f5a20eb4e73528151093cf88b9ea36677ee49aa1ebb12ec2
-EBUILD vmware-workstation-6.0.2.59824.ebuild 3696 RMD160 bdafb06042366e4a05aeb76f6bb2ffef6244c050 SHA1 69df59dc870890cd2c0224a884eaabe52ef5cf0d SHA256 0366a3ba6a3ddea60fcc0f25adf8e014b41ac1c15e258e45e5b832e5321e950b
-EBUILD vmware-workstation-6.0.3.80004.ebuild 4033 RMD160 5bfb0f74785bd931f7d37028608f197089cf106d SHA1 28509161bc7cb3c363247810c27ec0f745b2333e SHA256 fc9da021cd8edbb81b5d2dd1c94cb99eb840f7194d516a48c221f65a94c20821
+EBUILD vmware-workstation-5.5.5.56455.ebuild 3096 RMD160 c60e664a6bd748250c8bb98ad3b3638a1f409325 SHA1 5240e326dd74dc15ad3291faa19898fdb825fada SHA256 6392e9a41d599096742f4ffa55b0e81508dddd80cb9d2d4dc2e65394c07cce22
+EBUILD vmware-workstation-5.5.6.80404.ebuild 3247 RMD160 a619054c3c4318362f30e6ca10047b54c0dd6f6a SHA1 053e1cfd70208934063fbaab49581f7907381b5f SHA256 6470238fc76ab279dfb01ee2b13a4d32ff29d4f96aa9c5d094a09a786de4a214
+EBUILD vmware-workstation-6.0.2.59824.ebuild 3696 RMD160 d75355ce8192732598af51a33936c60642925178 SHA1 24eee570a61a7e913fb54f570844e004b2eebe70 SHA256 4f9f38f681a2d04c475070159ace1c491df7cb9ff1c09a5440201118c1bfe72d
+EBUILD vmware-workstation-6.0.3.80004.ebuild 4047 RMD160 815e6ae211e17e9be7740c34ef09e61468ff3569 SHA1 bfe83f4dd2f223f9c1fe605565dfc8767956ead7 SHA256 786c8fec63a60c2e1124f58fa6db45a83c85c84a2edb7bdd6c1c1c8b74ea61f1
 EBUILD vmware-workstation-6.5.0.84113.ebuild 4264 RMD160 2f746436c3188ba8903556b46e9f21804fa4a6e5 SHA1 46749a58cb5634436779593b5154b5b9cbb83f5b SHA256 9e18c5daae1e8fc32f71104180d05a61a375b26906cb220908527ada00c86f1f
