@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-workstation/vmware-workstation-5.5.5.56455.ebuild,v 1.3 2007/10/11 07:14:54 kingtaco Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-workstation/vmware-workstation-5.5.6.80404.ebuild,v 1.2 2008/04/26 16:29:15 ikelos Exp $
 
 inherit vmware eutils versionator
 
@@ -10,6 +10,7 @@ DESCRIPTION="Emulate a complete PC on your PC without the usual performance over
 HOMEPAGE="http://www.vmware.com/download/ws/ws5.html"
 SRC_URI="mirror://vmware/software/wkst/${MY_P}.tar.gz
 	http://download.softpedia.ro/linux/${MY_P}.tar.gz
+	mirror://gentoo/${ANY_ANY}.tar.gz
 	http://platan.vc.cvut.cz/ftp/pub/vmware/${ANY_ANY}.tar.gz
 	http://platan.vc.cvut.cz/ftp/pub/vmware/obsolete/${ANY_ANY}.tar.gz
 	http://ftp.cvut.cz/vmware/${ANY_ANY}.tar.gz
@@ -86,7 +87,7 @@ src_install() {
 
 	doicon lib/share/pixmaps/vmware-player.png
 	# Fix an ugly GCC error on start
-	rm -f ${Ddir}lib/lib/libgcc_s.so.1/libgcc_s.so.1
+	rm -f "${Ddir}lib/lib/libgcc_s.so.1/libgcc_s.so.1"
 	make_desktop_entry vmware "VMWare Workstation" ${PN}.png System
 	make_desktop_entry vmplayer "VMWare Player" vmware-player.png System
 }
