@@ -3,6 +3,13 @@
 # $ Id: $
 
   26 Apr 2008; Mike Auty <ikelos@gentoo.org>
+  app-emulation/vmware-workstation/vmware-workstation-5.5.5.56455.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-5.5.6.80404.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-6.0.2.59824.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-6.0.3.80004.ebuild:
+  Sync vmware-workstation up with the tree.
+
+  26 Apr 2008; Mike Auty <ikelos@gentoo.org>
   -app-emulation/vmware-workstation-tools/files/5.5.1/000_all_initd-scripts.
   patch,
   -app-emulation/vmware-workstation-tools/files/5.5.2/000_all_initd-scripts.
